[gd_scene load_steps=7 format=3 uid="uid://b5orb1i70agwr"]

[ext_resource type="Script" path="res://Scripts/Enemigo/Kamikaze/Enemigo_kamikaze_v2.gd" id="1_04e3g"]
[ext_resource type="Texture2D" uid="uid://dhkrkullogfv5" path="res://Arte/Enemigo/Kamikaze/KamikazeV2.png" id="2_ftamw"]
[ext_resource type="AudioStream" uid="uid://brovwhyb6u8fk" path="res://Escenas/Audio del Juego/Explosion personalizada 1.mp3" id="3_ljdhn"]
[ext_resource type="PackedScene" uid="uid://dub2moc6plvgf" path="res://Escenas/Elemenos/Direcciones.tscn" id="4_wfahd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7p2ae"]
size = Vector2(47, 11)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ooca"]
size = Vector2(14, 4.5)

[node name="Enemigo_kamikaze_v2" type="Node2D" groups=["Enemigo"]]
script = ExtResource("1_04e3g")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
z_index = 1
position = Vector2(-8.5, -0.5)
shape = SubResource("RectangleShape2D_7p2ae")

[node name="Pivot" type="Node2D" parent="."]

[node name="Icon" type="Sprite2D" parent="Pivot"]
rotation = 1.5708
scale = Vector2(0.630129, 0.808972)
texture = ExtResource("2_ftamw")

[node name="Hurt_box" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurt_box"]
position = Vector2(25, -0.75)
shape = SubResource("RectangleShape2D_0ooca")

[node name="Explosion" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ljdhn")

[node name="Direcciones" type="Control" parent="."]
layout_direction = 1
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Direccion_1" type="Node2D" parent="Direcciones"]
position = Vector2(-139, -79)

[node name="Direccion_2" type="Node2D" parent="Direcciones"]
position = Vector2(0, -87)

[node name="Direccion_3" type="Node2D" parent="Direcciones"]
position = Vector2(134, -88)

[node name="Direccion_4" type="Node2D" parent="Direcciones"]
position = Vector2(142, 17)

[node name="Direccion_5" type="Node2D" parent="Direcciones"]
position = Vector2(149, 121)

[node name="Direccion_6" type="Node2D" parent="Direcciones"]
position = Vector2(-3, 136)

[node name="Direccion_7" type="Node2D" parent="Direcciones"]
position = Vector2(-142, 129)

[node name="Direccion_8" type="Node2D" parent="Direcciones"]
position = Vector2(-151, 9)

[node name="Direcciones3" type="Node" parent="."]

[node name="Direccion_1" type="Control" parent="Direcciones3"]
layout_mode = 3
anchors_preset = 0
offset_left = 443.0
offset_top = 238.0
offset_right = 483.0
offset_bottom = 278.0

[node name="Direccion_2" type="Control" parent="Direcciones3"]
layout_mode = 3
anchors_preset = 0
offset_left = 494.0
offset_top = 237.0
offset_right = 534.0
offset_bottom = 277.0

[node name="Direccion_3" type="Control" parent="Direcciones3"]
layout_mode = 3
anchors_preset = 0
offset_left = 650.0
offset_top = 257.0
offset_right = 690.0
offset_bottom = 297.0

[node name="Direccion_4" type="Control" parent="Direcciones3"]
layout_mode = 3
anchors_preset = 0
offset_left = 654.0
offset_top = 351.0
offset_right = 694.0
offset_bottom = 391.0

[node name="Direccion_5" type="Control" parent="Direcciones3"]
layout_mode = 3
anchors_preset = 0
offset_left = 659.0
offset_top = 415.0
offset_right = 699.0
offset_bottom = 455.0

[node name="Direccion_6" type="Control" parent="Direcciones3"]
layout_mode = 3
anchors_preset = 0
offset_left = 601.0
offset_top = 383.0
offset_right = 641.0
offset_bottom = 423.0

[node name="Direccion_7" type="Control" parent="Direcciones3"]
layout_mode = 3
anchors_preset = 0
offset_left = 487.0
offset_top = 389.0
offset_right = 527.0
offset_bottom = 429.0

[node name="Direccion_8" type="Control" parent="Direcciones3"]
layout_mode = 3
anchors_preset = 0
offset_left = 487.0
offset_top = 304.0
offset_right = 527.0
offset_bottom = 344.0

[node name="Direcciones2" parent="." instance=ExtResource("4_wfahd")]

[connection signal="body_entered" from="Hurt_box" to="." method="_on_hurt_box_body_entered"]
[connection signal="devolverDireccion" from="Direcciones2" to="." method="_on_direcciones_2_devolver_direccion"]
